--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "vue": "^3.5.13"
   },
   "devDependencies": {
+    "@crxjs/vite-plugin": "^1.0.14",
+    "@types/node": "^22.10.1",
     "@vitejs/plugin-vue": "^5.2.1",
+    "chrome-types": "^0.1.323",
+    "rollup-plugin-copy": "^3.5.0",
     "typescript": "~5.6.2",
     "vite": "^6.0.1",
     "vue-tsc": "^2.1.10"
