--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@crxjs/vite-plugin": "^1.0.14",
     "@types/node": "^22.10.1",
     "@vitejs/plugin-vue": "^5.2.1",
+    "autoprefixer": "^10.4.20",
     "chrome-types": "^0.1.323",
+    "postcss": "^8.4.49",
     "rollup-plugin-copy": "^3.5.0",
+    "tailwindcss": "^3.4.16",
     "typescript": "~5.6.2",
     "vite": "^6.0.1",
     "vue-tsc": "^2.1.10"
