--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vitejs/plugin-vue": "^5.2.1",
     "autoprefixer": "^10.4.20",
     "chrome-types": "^0.1.323",
+    "less": "^4.2.1",
     "postcss": "^8.4.49",
     "rollup-plugin-copy": "^3.5.0",
     "tailwindcss": "^3.4.16",
