--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "autoprefixer": "^10.4.20",
     "chrome-types": "^0.1.323",
     "less": "^4.2.1",
+    "naive-ui": "^2.40.3",
     "postcss": "^8.4.49",
     "rollup-plugin-copy": "^3.5.0",
     "tailwindcss": "^3.4.16",
     "typescript": "~5.6.2",
+    "unplugin-auto-import": "^0.18.6",
+    "unplugin-vue-components": "^0.27.5",
     "vite": "^6.0.1",
     "vue-tsc": "^2.1.10"
   }
