--- a/manifest.json
+++ b/manifest.json
@@ -23,6 +23,9 @@
       "js": [
         "/content/content.ts"
       ],
+      "css": [
+        "/css/global.css"
+      ],
       "matches": [
         "<all_urls>"
       ],
@@ -35,11 +38,20 @@
     {
       "resources": [
         "popup/*",
+        "content/*",
         "assets/*",
         "icons/*",
         "js/*"
       ],
       "matches": []
     }
+  ],
+  "permissions": [
+    "contextMenus",
+    "sidePanel",
+    "tabs",
+    "notifications",
+    "webRequest",
+    "storage"
   ]
 }
